# usbd-storage

./: CHANGELOG.md  Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config
.github/workflows/: changelog.yml  ci.yml
examples/: Cargo.toml  README.md  stm32f411x_scsi_bbb.rs  stm32f411x_ufi_bbb.rs
examples-rp2040/: Cargo.toml  README.md  memory.x  partial_demo_1m_fat_image.img
examples-rp2040/.cargo/: config.toml
examples/.cargo/: config.toml
examples/rp2040/: Cargo.toml  memory.x
examples/rp2040/.cargo/: config.toml
examples/stm32/: Cargo.toml  README.md  build.rs  cat_fat12.img
src/: fmt.rs  lib.rs
src/subclass/: mod.rs  scsi.rs  ufi.rs
src/transport/: bbb.rs
tests/: scsi_bbb.rs
usbd-storage/: Cargo.toml
usbd-storage/src/: buffer.rs  fmt.rs  lib.rs
usbd-storage/src/subclass/: scsi.rs  ufi.rs
usbd-storage/src/transport/: bbb.rs  mod.rs
usbd-storage/tests/: scsi_bbb.rs
usbd-storage/tests/common/: bbb.rs  mod.rs  scsi.rs
