[package]
name = "usbd-storage"
description = "USB Mass Storage class for usb-device."
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/apohrebniak/usbd-storage"
homepage = "https://github.com/apohrebniak/usbd-storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# USB stack
[dependencies.usb-device]
version = "0.3"

# Logging
[dependencies.defmt]
version = "0.3"
optional = true

# dev-dependencies

[dependencies.num_enum]
version = "0.6.0"
default-features = false

[features]
default = []
defmt = ["dep:defmt", "usb-device/defmt"]
bbb = []
ufi = []
scsi = []

# base runtime configuration for cortex m
[dev-dependencies.cortex-m-rt]
version = "0.7.3"

# access to core peripherals
[dev-dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# embedded_hal implementation for stm32fxx
# "stm32f411" feature brings the "device crate"
# "usb_fs" enables OTG peripheral access
# https://docs.rs/cortex-m-rt/latest/cortex_m_rt/#device
[dev-dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f411", "usb_fs"]

# peripheral-access crate
[dev-dependencies.stm32f4]
version = "0.15.1"

# logging
[dev-dependencies.defmt]
version = "0.3.4"

# logging transport
[dev-dependencies.defmt-rtt]
version = "0.4.0"

[[example]]
name = "stm32f411x_ufi_bbb"
required-features = ["ufi", "bbb", "defmt"]

[[example]]
name = "stm32f411x_scsi_bbb"
required-features = ["scsi", "bbb", "defmt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
