[package]
name = "examples-rp2040"
description = "USB Mass Storage class device examples"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/apohrebniak/usbd-storage"
homepage = "https://github.com/apohrebniak/usbd-storage"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1" }
defmt-rtt = "1"
embedded-hal = "1"
rp2040-boot2 = "0.3"
rp2040-flash = "0.6"
rp2040-hal = { version = "0.11", features = ["critical-section-impl"] }
usb-device = "0.3.2"
usbd-storage = { path = "../usbd-storage", default-features = false, features = ["bbb", "defmt", "scsi", "ufi"] }

[[bin]]
name = "rp2040_scsi_bbb"
